--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Simulador de Carrito de Compras</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -14,9 +15,7 @@
     <form id="formProducto">
       <label for="producto">Producto:</label>
       <select id="producto">
-        <option value="1">Camiseta - $20</option>
-        <option value="2">Pantalón - $40</option>
-        <option value="3">Zapatos - $60</option>
+        
       </select>
 
       <label for="cantidad">Cantidad:</label>
